--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     </footer>
 
 
-    <script src="src/services/ServicioConsultaCanciones.js"></script>
+    <script src="src/services/ServicioConsultaCanciones.js" type="module"></script>
     <!-- JavaScript Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8"
