--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
                             <select class="form-select" aria-label="Default select example" id="artista">
                                 <option value="1SupJlEpv7RS2tPNRaHViT">Nicky jam</option>
                                 <option value="5LIulxyhL1bYKZzThgO0zI">Hebert vargas</option>
-                                <option value="4VMYDCV2IEDYJArk749S6m">Daddy yankee</option>
+                                <option value="21451j1KhjAiaYKflxBjr1">Zion & lennox</option>
                                 <option value="00me4Ke1LsvMxt5kydlMyU">Cosculluela</option>
-                                <option value="5GcWBUX00IPuWVGMIRK1sS">[R]</option>
+                                <option value="3YXpTiyVmYCfANOlnWv6vr">Trebol Clan</option>
                                 <option value="7L7l7toWdGA3T1wmFr83sg">six nine</option>
                                 <option value="3JCyEziWwDZksR1WY8EckM">Dario gomez</option>
                                 <option value="0paKwMZx6yZxQBQXRjR6La">Los visconti</option>
@@ -54,7 +54,7 @@
     </footer>
 
 
-    <script src="src/services/ServicioConsultaCanciones.js" type="module"></script>
+    <script src="./src/controllers/controladorBuscarCanciones.js" type="module"></script>
     <!-- JavaScript Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8"
